--- a/src/components/postUser/postUser.module.css
+++ b/src/components/postUser/postUser.module.css
@@ -1,4 +1,9 @@
 .container{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.texts{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -12,4 +17,7 @@
   .username{
     font-weight: 500;
   }
-  
+  .avatar{
+    border-radius: 50%;
+    object-fit: cover;
+  }
