--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,17 +21,19 @@ a{
 .container{
     width: 1536px;
     margin: auto;
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-left: 60px;
+    padding-right: 60px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 10px;
 }
 
 @media (max-width:1536px){
     .container{
         width: 1366px;
+        height: 100vh;
     }
 }
 @media (max-width:1336px){
@@ -42,8 +44,9 @@ a{
 @media (max-width:1280px){
     .container{
         width: 1024px;
-        padding-left: 80px;
-        padding-right: 80px;
+        padding-left: 50px;
+        padding-right: 50px;
+        
     }
 }
 @media (max-width:1024px){
@@ -58,11 +61,14 @@ a{
 }
 @media (max-width:640px){
     .container{
-        width: 475px;
+        width: 630px;
+      
+        /* width: 475px; */
     }
 }
 @media (max-width:475px){
     .container{
-        width: 380px;
+        width: 460px;
+        /* width: 380px; */
     }
 }
