--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,6 +1,7 @@
 .container{
     display: flex;
     gap:100px;
+    margin-top: 10px;
 }
 .textContainer{
     flex:1;
@@ -9,7 +10,7 @@
     gap: 50px;
 }
 .title{
-    font-size: 75px;
+    font-size: 65px;
 }
 .desc{
     font-size: 14px;
@@ -25,17 +26,23 @@
     min-width: 120px;
     cursor: pointer;
     border: none;
-    border-radius: 5px; 
+    border-radius: 5px;
+    font-weight: 450; 
 }
 .button:first-child{
     background-color: var(--btn);
     color: var(--text);
+}
+.button:last-child{
+    background-color: white;
+    color: black;
 }
 
 .brands{
     width: 500px;
     height: 50px;
     position: relative;
+   
     filter: grayscale(1);
 }
 .imgContainer{
@@ -46,18 +53,69 @@
     .container{
         flex-direction: column;
         text-align: center;
+        
+       
     }
     .buttons{
         justify-content: center;
     }
 }
 @media (max-width:768px){
+    .container{
+        gap:0;
+        margin-top: 10px; /* Adjust top margin as needed */
+        margin-bottom: 10px;
+        /* top: 20;
+        bottom: 0px; */
+        gap: 0;
+        
+    }
     .title{
-        font-size: 33px;
+        font-size: 30px;
+        margin-bottom: 5px; 
+
     }
     .brands{
 
-        width:100%
+        width:100vw;
+       
+        
+    
+    }
+    .imgContainer{
+        display: none;
+
+    }
+    .desc{
+        font-size: 12px;
+    }
+
+}
+@media (max-width:380px){
+    .container{
+        gap:0;
+        margin-top: 5px; /* Adjust top margin as needed */
+        margin-bottom: 5px;
+        /* top: 20;
+        bottom: 0px; */
+        gap: 0;
+        
+    }
+    .title{
+        font-size: 30px;
+        margin-bottom: 5px; 
+
+    }
+    .brands{
+
+        width:100vw;
+       
+        
+    
+    }
+    .imgContainer{
+        display: none;
+
     }
     .desc{
         font-size: 12px;
