--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,10 +1,10 @@
 .container{
     display: flex;
-    height: 100px;
+    height: 80px;
     align-items: center;
     justify-content: space-between;
     color: gray;
-    
+    margin-top: 0;
 }
 .logo{
     font-weight: bold;
@@ -17,5 +17,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        
     }
   }
